@@ -15,4 +15,6 @@
 (x - 2)/(-x^2 + x)
 x^2/(-x + 1)
 1/(-x^5 + x^4)
-Total time spent: 4
+x^10/(-x^11 + 11*x^10 - 55*x^9 + 165*x^8 - 330*x^7 + 462*x^6 - 462*x^5 + 330
+*x^4 - 165*x^3 + 55*x^2 - 11*x + 1)
+Total time spent: 1
